--- a/index.html
+++ b/index.html
@@ -38,72 +38,83 @@
 
   <h2>🟢 שלב 1: יסודות בתקשורת מחשבים ורשתות</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=NyZWSvSj8ek">LAN, WAN, SUBNET - EXPLAINED</a></li>
-    <li><a href="https://www.youtube.com/watch?v=4_zSIXb7tLQ">Network Types: LAN, WAN, PAN, CAN, MAN, SAN, WLAN</a></li>
-    <li><a href="https://www.youtube.com/watch?v=1z0ULvg_pW8">Hub, Switch, & Router Explained</a></li>
-    <li><a href="https://www.youtube.com/watch?v=ThdO9beHhpA">IP Address - IPv4 vs IPv6</a></li>
-    <li><a href="https://www.youtube.com/watch?v=s_Ntt6eTn94">Subnet Mask</a></li>
-    <li><a href="https://www.youtube.com/watch?v=pCcJFdYNamc">Default Gateway</a></li>
-    <li><a href="https://www.youtube.com/watch?v=TIiQiw7fpsU">MAC Address</a></li>
-    <li><a href="https://www.youtube.com/watch?v=C2FrTZxi_NI">Collision Domain vs Broadcast Domain</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=NyZWSvSj8ek">LAN, WAN, SUBNET - EXPLAINED</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=4_zSIXb7tLQ">Network Types: LAN, WAN, PAN, CAN, MAN, SAN, WLAN</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=1z0ULvg_pW8">Hub, Switch, & Router Explained</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=ThdO9beHhpA">IP Address - IPv4 vs IPv6</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=s_Ntt6eTn94">Subnet Mask</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=pCcJFdYNamc">Default Gateway</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=TIiQiw7fpsU">MAC Address</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=C2FrTZxi_NI">Collision Domain vs Broadcast Domain</a></label></li>
   </ul>
 
   <h2>🟡 שלב 2: פרוטוקולים ותקשורת נתונים</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=KjD3KANH-xc">Data Packets</a></li>
-    <li><a href="https://www.youtube.com/watch?v=uwoD5YsGACg">TCP vs UDP</a></li>
-    <li><a href="https://www.youtube.com/watch?v=cn8Zxh9bPio">ARP</a></li>
-    <li><a href="https://www.youtube.com/watch?v=FTUV0t6JaDA">NAT</a></li>
-    <li><a href="https://www.youtube.com/watch?v=e6-TaH5bkjo">DHCP</a></li>
-    <li><a href="https://www.youtube.com/watch?v=HnUDtycXSNE">DNS Records</a></li>
-    <li><a href="https://www.youtube.com/watch?v=mpQZVYPuDGU">How DNS Server Works</a></li>
-    <li><a href="https://www.youtube.com/watch?v=hExRDVZHhig">SSL, TLS, HTTP, HTTPS</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=KjD3KANH-xc">Data Packets</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=uwoD5YsGACg">TCP vs UDP</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=cn8Zxh9bPio">ARP</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=FTUV0t6JaDA">NAT</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=e6-TaH5bkjo">DHCP</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=HnUDtycXSNE">DNS Records</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=mpQZVYPuDGU">How DNS Server Works</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=hExRDVZHhig">SSL, TLS, HTTP, HTTPS</a></label></li>
   </ul>
 
   <h2>🔵 שלב 3: כלים ופיקוד</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=Jfq_BYhxvy0">Windows Command Line Tools</a></li>
-    <li><a href="https://www.youtube.com/watch?v=IIicPE38O-s">PING Command</a></li>
-    <li><a href="https://www.youtube.com/watch?v=up3bcBLZS74">TRACERT Explained</a></li>
-    <li><a href="https://www.youtube.com/watch?v=8UZFpCQeXnM">NETSTAT Command</a></li>
-    <li><a href="https://www.youtube.com/watch?v=ZKhorleA5aA">IPCONFIG Explained</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=Jfq_BYhxvy0">Windows Command Line Tools</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=IIicPE38O-s">PING Command</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=up3bcBLZS74">TRACERT Explained</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=8UZFpCQeXnM">NETSTAT Command</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=ZKhorleA5aA">IPCONFIG Explained</a></label></li>
   </ul>
 
   <h2>🟠 שלב 4: אבטחת מידע ופרטיות</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=R-JUOpCgTZc">VPN Explained</a></li>
-    <li><a href="https://www.youtube.com/watch?v=xTH1ZA_qUvA">IPsec</a></li>
-    <li><a href="https://www.youtube.com/watch?v=kDEX1HXybrU">Firewall</a></li>
-    <li><a href="https://www.youtube.com/watch?v=RXXRguaHZs0">Proxy vs Reverse Proxy</a></li>
-    <li><a href="https://www.youtube.com/watch?v=dqlzQXo1wqo">What is a DMZ?</a></li>
-    <li><a href="https://www.youtube.com/watch?v=ilhGh9CEIwM">DDoS Attack</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=R-JUOpCgTZc">VPN Explained</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=xTH1ZA_qUvA">IPsec</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=kDEX1HXybrU">Firewall</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=RXXRguaHZs0">Proxy vs Reverse Proxy</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=dqlzQXo1wqo">What is a DMZ?</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=ilhGh9CEIwM">DDoS Attack</a></label></li>
   </ul>
 
   <h2>🟣 שלב 5: שרתים, אחסון ווירטואליזציה</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=UjCDWCeHCzY">What is a Server?</a></li>
-    <li><a href="https://www.youtube.com/watch?v=UBVVq-xz5i0">Virtualization</a></li>
-    <li><a href="https://www.youtube.com/watch?v=eyNBf1sqdBQ">VM vs Containers</a></li>
-    <li><a href="https://www.youtube.com/watch?v=_a6us8kaq0g">Cloud Computing</a></li>
-    <li><a href="https://www.youtube.com/watch?v=3yZDDr0JKVc">NAS vs SAN</a></li>
-    <li><a href="https://www.youtube.com/watch?v=U-OCdTeZLac">RAID Levels</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=UjCDWCeHCzY">What is a Server?</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=UBVVq-xz5i0">Virtualization</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=eyNBf1sqdBQ">VM vs Containers</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=_a6us8kaq0g">Cloud Computing</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=3yZDDr0JKVc">NAS vs SAN</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=U-OCdTeZLac">RAID Levels</a></label></li>
   </ul>
 
   <h2>🟤 שלב 6: נושאים מתקדמים ותשתיות</h2>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=nhhfSBm6v4A">CDN Explained</a></li>
-    <li><a href="https://www.youtube.com/watch?v=jC6MJTh9fRE">VLAN</a></li>
-    <li><a href="https://www.youtube.com/watch?v=6_giEv20En0">Subnets vs VLANs</a></li>
-    <li><a href="https://www.youtube.com/watch?v=6MW5P6Ci7lw">Spanning Tree Protocol</a></li>
-    <li><a href="https://www.youtube.com/watch?v=CGmTvukObOw">Routing Tables</a></li>
-    <li><a href="https://www.youtube.com/watch?v=2fPgKvDBfbs">Virtual Private Cloud (VPC)</a></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=nhhfSBm6v4A">CDN Explained</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=jC6MJTh9fRE">VLAN</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=6_giEv20En0">Subnets vs VLANs</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=6MW5P6Ci7lw">Spanning Tree Protocol</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=CGmTvukObOw">Routing Tables</a></label></li>
+    <li><label><input type="checkbox"> <a href="https://www.youtube.com/watch?v=2fPgKvDBfbs">Virtual Private Cloud (VPC)</a></label></li>
   </ul>
 
 </body>
 <script>
+  // open external links in new tabs
   document.querySelectorAll('a').forEach(link => {
     link.setAttribute('target', '_blank');
     link.setAttribute('rel', 'noopener noreferrer'); // להגנה נוספת
+  });
+
+  // save watched videos state
+  document.querySelectorAll('input[type="checkbox"]').forEach(cb => {
+    const link = cb.nextElementSibling;
+    const key = link.getAttribute('href');
+    cb.checked = localStorage.getItem(key) === 'true';
+    cb.addEventListener('change', () => {
+      localStorage.setItem(key, cb.checked);
+    });
   });
 </script>
 </html>
