Redesign category layout

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <main>
     <section class="section">
       <h2>בחר קטגוריה</h2>
-      <ul>
-        <li><a href="categories/stage1.html">🟢 שלב 1: יסודות בתקשורת מחשבים ורשתות</a></li>
-        <li><a href="categories/stage2.html">🟡 שלב 2: פרוטוקולים ותקשורת נתונים</a></li>
-        <li><a href="categories/stage3.html">🔵 שלב 3: כלים ופיקוד</a></li>
-        <li><a href="categories/stage4.html">🟠 שלב 4: אבטחת מידע ופרטיות</a></li>
-        <li><a href="categories/stage5.html">🟣 שלב 5: שרתים, אחסון ווירטואליזציה</a></li>
-        <li><a href="categories/stage6.html">🟤 שלב 6: נושאים מתקדמים ותשתיות</a></li>
-      </ul>
+      <div class="category-grid">
+        <a class="category-item" href="categories/stage1.html">🟢 שלב 1: יסודות בתקשורת מחשבים ורשתות</a>
+        <a class="category-item" href="categories/stage2.html">🟡 שלב 2: פרוטוקולים ותקשורת נתונים</a>
+        <a class="category-item" href="categories/stage3.html">🔵 שלב 3: כלים ופיקוד</a>
+        <a class="category-item" href="categories/stage4.html">🟠 שלב 4: אבטחת מידע ופרטיות</a>
+        <a class="category-item" href="categories/stage5.html">🟣 שלב 5: שרתים, אחסון ווירטואליזציה</a>
+        <a class="category-item" href="categories/stage6.html">🟤 שלב 6: נושאים מתקדמים ותשתיות</a>
+      </div>
     </section>
   </main>
 </body>
