--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>מפת דרכים ללימוד DevOps</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p1CmN1S2TU1sdSkrzE8zlH6ZiYze2h4MxNZ1PyMXBhK7tJ5Gvn8HQ9QCV0b9HZjQsv5xkY0JjPE0V4cJq2F+AA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +14,49 @@
   <main>
     <section class="section">
       <h2>בחר קטגוריה</h2>
-      <div class="category-grid">
-        <a class="category-item" href="categories/stage1.html">🟢 שלב 1: יסודות בתקשורת מחשבים ורשתות</a>
-        <a class="category-item" href="categories/stage2.html">🟡 שלב 2: פרוטוקולים ותקשורת נתונים</a>
-        <a class="category-item" href="categories/stage3.html">🔵 שלב 3: כלים ופיקוד</a>
-        <a class="category-item" href="categories/stage4.html">🟠 שלב 4: אבטחת מידע ופרטיות</a>
-        <a class="category-item" href="categories/stage5.html">🟣 שלב 5: שרתים, אחסון ווירטואליזציה</a>
-        <a class="category-item" href="categories/stage6.html">🟤 שלב 6: נושאים מתקדמים ותשתיות</a>
+      <div class="category-grid modern-grid">
+        <a class="category-card stage1" href="categories/stage1.html">
+          <div class="content">
+            <div class="stage-num">שלב 1</div>
+            <div class="title">יסודות בתוכנות מחשבים ורשתות</div>
+          </div>
+          <i class="fas fa-network-wired icon-bg" aria-hidden="true"></i>
+        </a>
+        <a class="category-card stage2" href="categories/stage2.html">
+          <div class="content">
+            <div class="stage-num">שלב 2</div>
+            <div class="title">פרוטוקולים ותקשורת נתונים</div>
+          </div>
+          <i class="fas fa-project-diagram icon-bg" aria-hidden="true"></i>
+        </a>
+        <a class="category-card stage3" href="categories/stage3.html">
+          <div class="content">
+            <div class="stage-num">שלב 3</div>
+            <div class="title">כלים ופיקוד</div>
+          </div>
+          <i class="fas fa-terminal icon-bg" aria-hidden="true"></i>
+        </a>
+        <a class="category-card stage4" href="categories/stage4.html">
+          <div class="content">
+            <div class="stage-num">שלב 4</div>
+            <div class="title">שלב 4</div>
+          </div>
+          <i class="fas fa-cogs icon-bg" aria-hidden="true"></i>
+        </a>
+        <a class="category-card stage5" href="categories/stage5.html">
+          <div class="content">
+            <div class="stage-num">שלב 5</div>
+            <div class="title">שרתים, אחסון ווירטואליזציה</div>
+          </div>
+          <i class="fas fa-server icon-bg" aria-hidden="true"></i>
+        </a>
+        <a class="category-card stage6" href="categories/stage6.html">
+          <div class="content">
+            <div class="stage-num">שלב 6</div>
+            <div class="title">נושאים מתקדמים ותשתיות</div>
+          </div>
+          <i class="fas fa-sitemap icon-bg" aria-hidden="true"></i>
+        </a>
       </div>
     </section>
   </main>
